# busqueda_laptop

./: .gitignore  README.md  app.py  notifier.py  pyproject.toml  scraper.py  tracker.py
static/: app.js  index.html  styles.css
